# run

./: .gitattributes  .gitignore  MODULE.aspect  README.md  multirun.axl  run.axl  runnable.axl
.github/workflows/: build_release_artifacts.yaml  ci.yaml  publish_release_artifacts.yaml  release.yaml
example/: BUILD  MODULE.aspect  MODULE.axl  README.md  bazel-bin  bazel-example  bazel-out  bazel-testlogs  bin.sh  data.json  program2.sh
example/.aspect/: multi_run.axl  run.axl  runnable.axl  task.axl
pty-multiplex/: .bazelrc  Cargo.toml  MODULE.bazel  rust-toolchain.toml
pty-multiplex/bazel/: defaults.bazelrc
pty-multiplex/bazel/include/: llvm.MODULE.bazel  rust.MODULE.bazel
pty-multiplex/src/: main.rs
